--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -470,7 +470,7 @@ form label {
 
 
 .landingDiv {
-    background: url('../img/grass_sunset.jpg') no-repeat center center;
+    background: url('../img/bg.jpg') no-repeat center center;
     background-size: cover;
     height: 100vh;
     position: relative;
@@ -487,7 +487,7 @@ form label {
     text-align: center;
     color: white;
     margin-top: calc(50vh - 200px);
-    font-size: 200px;
+    font-size: 100px;
 }
 
 .landingInfo {
